--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -47,6 +47,8 @@ jobs:
       with:
         name: build-output
         path: .
+    - name: Restore Permissions
+      run: find . -type f -path "*/bin/*" -exec chmod +x {} +
     - name: Run Unit Tests
       run: |
         dotnet test --project ${{ matrix.project }}/${{ matrix.project }}.csproj \
@@ -63,6 +65,8 @@ jobs:
       with:
         name: build-output
         path: .
+    - name: Restore Permissions
+      run: find . -type f -path "*/bin/*" -exec chmod +x {} +
     - name: Install and Trust Dotnet Dev Certificate
       run: |
         mkdir -p ${HOME}/.aspnet/https
