--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -57,14 +57,23 @@ jobs:
   e2e-tests:
     needs: build
     runs-on: ubuntu-latest
+    env:
+      GITHUB_USER: ${{ github.repository_owner }}
     strategy:
       matrix:
-        project: [Fylum.EndToEnd]
+        project: 
+        - Fylum.EndToEnd
     steps:
     - uses: actions/download-artifact@v4
       with:
         name: build-output
         path: .
+    - name: Add GitHub Packages source
+      run: |
+        dotnet nuget add source "https://nuget.pkg.github.com/${{ env.GITHUB_USER }}/index.json" \
+          --username ${{ env.GITHUB_USER }} \
+          --password ${{ secrets.GITHUB_TOKEN }} --store-password-in-clear-text \
+          --name github
     - name: Restore Aspire Components
       run: dotnet restore ${{ matrix.project }}/${{ matrix.project }}.csproj
     - name: Restore Permissions
