--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -55,7 +55,7 @@ jobs:
           --no-build -c Release --verbosity normal --property:EnableWindowsTargeting=true
 
   e2e-tests:
-    needs: build
+    needs: unit-tests
     runs-on: ubuntu-latest
     env:
       GITHUB_USER: ${{ github.repository_owner }}
