--- a/Fylum.Folders.Postgres/Fylum.Folders.Postgres.csproj
+++ b/Fylum.Folders.Postgres/Fylum.Folders.Postgres.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
   </ItemGroup>
 
   <ItemGroup>
