--- a/Fylum.Api/Fylum.Api.csproj
+++ b/Fylum.Api/Fylum.Api.csproj
@@ -15,6 +15,9 @@
 	<ItemGroup>
 		<ProjectReference Include="..\Fylum.Api.Shared\Fylum.Api.Shared.csproj" />
 		<ProjectReference Include="..\Fylum.Application\Fylum.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Folders.Api\Fylum.Folders.Api.csproj" />
+		<ProjectReference Include="..\Fylum.Folders.Application\Fylum.Folders.Application.csproj" />
+		<ProjectReference Include="..\Fylum.Folders.Postgres\Fylum.Folders.Postgres.csproj" />
 		<ProjectReference Include="..\Fylum.ServiceDefaults\Fylum.ServiceDefaults.csproj" />
 		<ProjectReference Include="..\Fylum.Users.Api\Fylum.Users.Api.csproj" />
 		<ProjectReference Include="..\Fylum.Users.Application\Fylum.Users.Application.csproj" />
