--- a/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
+++ b/Fylum.Migrations.Web/Fylum.Migrations.Web.csproj
@@ -1,6 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <ItemGroup>
-    <PackageReference Include="M2TWinForms.Themes" />
+    <PackageReference Include="MaterialTheming" />
     <PackageReference Include="MudBlazor" />
   </ItemGroup>
   <ItemGroup>
